--- a/css/style.css
+++ b/css/style.css
@@ -160,6 +160,15 @@ header{
     object-fit: cover;
     object-position: center;
 }
+.home-img img{
+    display: block;
+    margin: auto;
+    /* height: auto; */
+    /* max-height: 100%; */
+    height: 100%;
+    width: 100%;
+    max-width: 100%;
+}
 .home-text{
     display: flex;
     flex-direction: column;
